# auth-service

./: Dockerfile  app.py  autoapp.py  config.py  db.py  ma.py  pyproject.toml  pywsgi.py
api/v1/: __init__.py  role.py  user.py  user_role.py
common/: utils.py
config/: app.py  database.py  extentions.py  settings.py
migrations/: env.py
migrations/versions/: 2185e60de6b8_.py  2db616209fe8_.py  78322951fba1_.py  7929c07119f4_.py  7d394fa19c04_.py  990f6cf35a92_create_account_table.py  9e60e3cefbaa_.py  9ee9579a24ac_.py  b7edd360434e_.py  fea3a09c15b9_.py
models/: __init__.py  mixins.py  models.py
pydantic_models/: __init__.py  response.py  roles.py  token.py  user.py
role/: __init__.py  models.py  permission_views.py  role_views.py  serializers.py  user_role_views.py
services/: __init__.py  permission.py  pydantic.py  roles.py  token.py  user.py  user_role.py  utils.py
tests/functional/: conftest.py  docker-compose.yaml  entrypoint.sh  env_file  settings.py
tests/functional/src/: test_roles.py
user/: models.py
